add_subdirectory(template)
add_subdirectory(output)
add_subdirectory(slideshow)
add_subdirectory(video)
is_version(v ${KDE_VERSION_MAJOR} ${KDE_VERSION_MINOR} ${KDE_VERSION_RELEASE} 4 0 66) # >= 4.1.0
if (v)
add_subdirectory(kross)
else (v)
message(STATUS "Kross plugin is not build. It needs KDE version 4.1.0 or greater.")
endif (v)