##
## Do NOT remove the comments that start with "kdevelop:"
## They are actually directives to the kdevelop plugin system
##
## The HAVE_XXXX variables are controlled by configure.in.in
##

#kdevelop: DVIMPORT_SUBDIR = dvimport
if HAVE_LIBDV
DVIMPORT_SUBDIR = dvimport
endif

SUBDIRS = slideshow video template output $(DVIMPORT_SUBDIR)
